# rcp

./: pyproject.toml
src/rcp/: library.py  parsing.py  rendering.py
